package org.esfe.vacunacion.modelos;

public enum Especie {
    PERRO,
    GATO
}