package org.esfe.vacunacion.modelos;

public enum EstadoMascota {
    ACTIVO,
    FALLECIDO,
    DESAPARECIDO,
    OTRO
}