package org.esfe.vacunacion.modelos;

public enum EstadoUsuario {
    ACTIVO,
    INACTIVO
}