package org.esfe.vacunacion.modelos;

public enum EstadoVacunacion {
    VACUNADA,
    NO_VACUNADA
}
