package org.esfe.vacunacion.modelos;

public enum RolUsuario {
    ADMINISTRADOR,
    ENFERMERO,
    PACIENTE
}