@startuml
skinparam classAttributeIconSize 0
' Enums (Valores en UPPER_SNAKE_CASE)
enum RolUsuario {
  ADMINISTRADOR
  BRIGADISTA
  PERSONAL_AUTORIZADO
}
enum EstadoUsuario {
  ACTIVO
  INACTIVO
}
enum Especie {
  PERRO
  GATO
}
enum EstadoMascota {
  ACTIVO
  FALLECIDO
  DESAPARECIDO
  OTRO
}
' Nuevo enumerador para clasificar el estado de la vacunación
enum EstadoVacunacion {
  VACUNADA
  NO_VACUNADA
}
' Clases Principales (UpperCamelCase)
class CampanaVacunacion {
  - idCampana: String
  - nombre: String
  - fechaInicio: Date
  - fechaFin: Date
  - estado: String
  + listar(): List<CampanaVacunacion>
    + buscarPorId(id: Long): Optional<CampanaVacunacion>
    + guardar(campana: CampanaVacunacion): CampanaVacunacion
    + eliminar(id: Long): void
}
class CoberturaTerritorial {
  - idCobertura: String
  + listarPorCampana(idCampana: Long): List<CoberturaTerritorial>
  + listarTodas(): List<CoberturaTerritorial>
  + buscarPorId(id: Long): CoberturaTerritorial
  + guardar(coberturaTerritorial: CoberturaTerritorial): CoberturaTerritorial
  + eliminar(id: Long): void
}
class Departamento {
  - idDepartamento: String
  - nombre: String
  + guardar(departamento: Departamento): Departamento
  + obtenerTodos(): List<Departamento>
  + obtenerPorId(id: Long): Optional<Departamento>
  + eliminar(id: Long): void
}
class Municipio {
  - idMunicipio: String
  - nombre: String
  + guardar(municipio: Municipio): Municipio
  + obtenerTodos(): List<Municipio>
  + obtenerPorId(id: Long): Optional<Municipio>
  + eliminar(id: Long): void
  + existeDepartamento(idDepartamento: Long): Boolean
}
class Canton {
  - idCanton: String
  - nombre: String
  + guardar(canton: Canton): Canton
  + obtenerTodos(): List<Canton>
  + obtenerPorId(id: Long): Optional<Canton>
  + eliminar(id: Long): void
  + existeMunicipio(idMunicipio: Long): Boolean
}
class Colonia {
  - idColonia: String
  - nombre: String
  + guardar(colonia: Colonia): Colonia
  + obtenerTodos(): List<Colonia>
  + obtenerPorId(id: Long): Optional<Colonia>
  + eliminar(id: Long): void
  + existeCanton(idCanton: Long): Boolean
}
class Vivienda {
  - idVivienda: String
  - direccion: String
  - referenciaUbicacion: String
  + actualizarDireccion(nuevaDireccion: String): void
  + listarPorColonia(idColonia: Long): List<Vivienda>
  + listarTodas(): List<Vivienda>
  + buscarPorId(id: Long): Vivienda
  + guardar(vivienda: Vivienda): Vivienda
  + eliminar(id: Long): void
}
class Responsable {
  - idResponsable: String
  - nombreCompleto: String
  - telefono: String
  - documentoIdentidad: String
  + actualizarTelefono(nuevoTelefono: String): void
  + existsByDocumentoIdentidad(documentoIdentidad: String): Boolean
  + listarTodos(): List<Responsable>
  + buscarPorId(id: Long): Responsable
  + guardar(responsable: Responsable): Responsable
  + eliminar(id: Long): void
}
class ViviendaResponsable {
  - idVivienda: Long
  - idResponsable: Long
  + existsById_IdViviendaAndId_IdResponsable(idVivienda: Long, idResponsable: Long): Boolean
  + listarTodos(): List<ViviendaResponsable>
  + guardar(viviendaResponsable: ViviendaResponsable): ViviendaResponsable
}
class Mascota {
  - idMascota: Long
  - nombre: String
  - especie: Especie
  - fechaNacimiento: LocalDate
  - edadAproximadaMeses: Integer
  - estado: EstadoMascota
  - responsable: Responsable
  - vivienda: Vivienda
  + obtenerTodas(): List<Mascota>
  + obtenerPorId(idMascota: Long): Optional<Mascota>
  + guardar(mascota: Mascota): Mascota
  + eliminarPorId(idMascota: Long): void
  + actualizarInformacion(idMascota: Long, nombre: String, especie: Especie, edadAproximadaMeses: Integer): Mascota
  + cambiarEstado(idMascota: Long, nuevoEstado: EstadoMascota): Mascota
}

class Usuario {
  - idUsuario: Long
  - nombreCompleto: String
  - correo: String
  - contrasena: String
  - rol: RolUsuario
  - estado: EstadoUsuario
  + obtenerTodos(): List<Usuario>
  + obtenerPorId(idUsuario: Long): Optional<Usuario>
  + obtenerPorCorreo(correo: String): Optional<Usuario>
  + obtenerPorRol(rol: RolUsuario): List<Usuario>
  + guardar(usuario: Usuario): Usuario
  + eliminarPorId(idUsuario: Long): void
  + iniciarSesion(correo: String, contrasena: String): Usuario
  + cambiarRol(idUsuario: Long, nuevoRol: RolUsuario): Usuario
  + cambiarEstado(idUsuario: Long, nuevoEstado: EstadoUsuario): Usuario
}
' Clase unificada para los registros
class RegistroVacunacion {
  - idRegistro: String
  - fechaRegistro: Date
  - estado: EstadoVacunacion
  - motivoNoVacunacion: String
  - observaciones: String
  + listar(): List<RegistroVacunacion>
    + buscarPorId(id: Long): Optional<RegistroVacunacion>
    + guardar(registro: RegistroVacunacion): RegistroVacunacion
    + eliminar(id: Long): void
}

' Relaciones y Jerarquías
Departamento "1" -- "1..*" Municipio : contiene
Municipio "1" -- "1..*" Canton : contiene
Canton "1" -- "1..*" Colonia : contiene
Colonia "1" -- "0..*" Vivienda : pertenece a
Vivienda "1" -- "0..*" Mascota : habita en
Responsable "1" -- "0..*" Mascota : es responsable de
Responsable "1" -- "0..*" ViviendaResponsable : asociado con
Vivienda "1" -- "0..*" ViviendaResponsable : aloja
CampanaVacunacion "1" -- "1..*" CoberturaTerritorial : define
CoberturaTerritorial "0..*" -- "1" Colonia : abarca
Usuario "1" -- "0..*" RegistroVacunacion : ejecuta / registra
CampanaVacunacion "1" -- "0..*" RegistroVacunacion : registra
Mascota "1" -- "0..*" RegistroVacunacion : recibe / reporta
@enduml